[tool.poetry]
name = "shelter"
version = "0.3"
description = "List the shelters deployed around the world."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/cedricbonhomme/shelter-database"
repository = "https://github.com/cedricbonhomme/shelter-database"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.4"
SQLAlchemy = "^1.3.13"
alembic = "^1.4.0"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Flask-Restless = "^0.17.0"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
Flask-Script = "^2.0.6"
Flask-Admin = "^1.5.5"
Flask-Principal = "^0.4.0"
Flask-Babel = "^1.0.0"
Flask-Migrate = "^2.5.2"
Flask-thumbnails = "^1.0.6"
Flask-Assets = "^2.0"
cssmin = "^0.2.0"
jsmin = "^2.2.2"
Pillow = "^7.0.0"
requests = "^2.22.0"
weasyprint = "^51"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
